--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.flyway.url=jdbc:h2:file:~/providerdb
 spring.flyway.jdbc-url=jdbc:h2:file:~/providerdb
 spring.flyway.user=sa
 spring.flyway.password=
+
+auth0.issuer:https://ishirock.auth0.com/
+auth0.apiAudience:https://ishirock.com/provider
